--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,8 @@
     padding: 0px;
     margin: 0;
     height: auto;
-    width: auto;
-    max-width: 700px;
+    width: 500px;
+    
     max-height: fit-content;
     
     
