--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,25 @@
-* {
+body {
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+
 .container {
-    display: flex; 
-    flex-wrap: wrap;
-    border: 2px solid;
-    padding: 0px;
-    margin: 0;
-    height: auto;
+    border: 1px solid;
     width: 500px;
-    
-    max-height: fit-content;
-    
+    height: 500px;
+
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
     
 }
-.div {
-    width: 20px;
-    height: 20px;
-    flex: 1 0 auto;
-    background-color: pink;
-    
-    
-    
+
+.squareDiv {
+    background-color: blue;
+    border: 1px solid;
+    box-sizing: border-box;
 }
